chore: refactor development env

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@reearth/core</title>
+    <title>Reearth Core Example</title>
+    <style>
+      html, body{
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="/example/main.tsx"></script>
   </body>
 </html>
